--- a/po/wesnoth-units/en_GB.po
+++ b/po/wesnoth-units/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:30 UTC\n"
-"PO-Revision-Date: 2018-09-12 16:49+1000\n"
+"PO-Revision-Date: 2019-01-23 18:41+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [attack]: type=impact
 #. [attack]: type=arcane
@@ -2153,6 +2153,14 @@ msgid ""
 "Elvish archers are still effective combatants, especially when fighting from "
 "the safety of their forests."
 msgstr ""
+"As primarily foragers and hunters, most elves learn to become proficient "
+"archers from a young age. Besides being only a practical skill, archery is "
+"also a common pastime and many competitions are held in sport for the "
+"entertainment of spectators and participants alike. This ability is readily "
+"turned to battle in times of war, where many elves will wield bows as their "
+"weapons of choice. Though not as sturdy as their human or orc counterparts, "
+"Elvish archers are still effective combatants, especially when fighting from "
+"the safety of their forests."
 
 #. [female]
 #: data/core/units/elves/Archer.cfg:80
@@ -2188,6 +2196,26 @@ msgid ""
 "very little room for counterattack and customarily results in crushing "
 "defeat."
 msgstr ""
+"The curious name of the Elvish ‘Avengers’ comes from a tactic often employed "
+"by these master rangers. The enemy is allowed to break through a feint "
+"defence and when the vulnerable troops behind the front line follow, these "
+"archers break cover and attack, cutting supply lines and surrounding the "
+"enemy in one fell stroke. This has, at times, been interpreted as a form of "
+"vengeance for their brethren lost earlier in the battle. While not so base "
+"in design, it is not at all inaccurate.\n"
+"\n"
+"Even more than other elves, Avengers are a part of the realm of the forests, "
+"spending most of their time living among the arboreal creatures and learning "
+"the hidden secrets in the woods. As the keepers of nature, these elves have "
+"the propensity to explore the wilds even beyond the boundaries of the "
+"forests and are adept at traversing rough terrains like mountains and "
+"deserts. Even in such unfamiliar territories, Avengers are already powerful "
+"combatants; in their homes in the trees, they are nigh unassailable, capable "
+"of assassinating enemies from the shadows with little chance of retaliation. "
+"It is this ability which instils the most fear into any invading army, for "
+"fighting a force that can barely be tracked or seen in the forests leaves "
+"very little room for counter-attack and customarily results in crushing "
+"defeat."
 
 #. [female]
 #: data/core/units/elves/Avenger.cfg:95
@@ -2211,6 +2239,14 @@ msgid ""
 "often observed to lead through camaraderie and amicability, but still "
 "command great respect from their kin."
 msgstr ""
+"Elvish captains usually lead patrols and command garrisons that stand guard "
+"over the vast forests in elvish territory. Unlike leaders from other races, "
+"they are mostly proficient at navigating small skirmishes rather than large-"
+"scale battles, and are especially skilled at defensive manoeuvring. Captains "
+"typically command small units that remain together for extended periods of "
+"time, allowing them to personally mentor and befriend their troops. They are "
+"often observed to lead through camaraderie and amicability, but still "
+"command great respect from their kin."
 
 #. [unit_type]: id=Elvish Champion, race=elf
 #: data/core/units/elves/Champion.cfg:4
@@ -2230,6 +2266,15 @@ msgid ""
 "their whole lives refining their prowess with the blade, these elves are "
 "exceptionally dangerous and should never be underestimated."
 msgstr ""
+"Elves are typically peaceable by nature and most will attack only in "
+"retaliation for some wrongdoing wrought upon them. However, there are some "
+"elves who revel in the glory of battle and deliberately seek combat — "
+"purposeful or otherwise — for their own enjoyment. Naturally, most of these "
+"warriors live short lives devoted to honing their swordsmanship in an effort "
+"to conquer the battlegrounds: only the most talented thereof are capable of "
+"surviving constant combat and earning the title of ‘Champion’. Having spent "
+"their whole lives refining their prowess with the blade, these elves are "
+"exceptionally dangerous and should never be underestimated."
 
 #. [unit_type]: id=Elvish Druid, race=elf
 #: data/core/units/elves/Druid.cfg:4
@@ -2294,6 +2339,13 @@ msgid ""
 "react and counter. Most elves can learn the basics of swordplay relatively "
 "quickly and will readily pick up the blade when confronted with battle."
 msgstr ""
+"Among elves, swordplay is most commonly practised by rangers and border "
+"patrols, who serve primarily as guardians of the forests and more "
+"occasionally as small squads for intrusions into other territories. Elvish "
+"swordsmanship is known for its emphasis on swift, agile strikes, generating "
+"less power than human or orcish warriors, but also leaving less time to "
+"react and counter. Most elves can learn the basics of swordplay relatively "
+"quickly and will readily pick up the blade when confronted with battle."
 
 #. [unit_type]: id=Elvish Hero, race=elf
 #: data/core/units/elves/Hero.cfg:4
@@ -2319,6 +2371,21 @@ msgid ""
 "service, such a status is not one often sought after by the majority of "
 "Elvenkind."
 msgstr ""
+"Accomplished Elvish warriors are sometimes called ‘Sárcan’, roughly meaning "
+"‘one who has sacrificed in defence’ or ‘one transfigured by experience’. "
+"Often translated to ‘Elvish Heroes’ in the human tongue, this name does "
+"indicate some level of esteem and prestige, but is not used to glorify the "
+"position that these elves hold. Elvish Heroes are those who have survived "
+"numerous wars and have outlived many of their friends who fell in prior "
+"battles. They have seen all manner of atrocity committed by all races, be it "
+"orcs and humans ravaging the natural beauty of the forests, or even their "
+"own kind, other elves who are not above slaughtering innocent people out of "
+"pride and vengeance. Many years of fighting naturally make these swordsmen "
+"highly skilled in melee combat, but the hardships and destruction wrought by "
+"war take a great toll on both mind and body. While the Elves realize the "
+"necessity of military strength and honour the ‘Sárcanet’ as heroes for their "
+"service, such a status is not one often sought after by the majority of "
+"Elvenkind."
 
 #. [unit_type]: id=Elvish High Lord, race=elf
 #: data/core/units/elves/High_Lord.cfg:4
@@ -2388,6 +2455,28 @@ msgid ""
 "restraint is difficult for most, but those who can do so are granted the "
 "title of Lord and become the next generation of Elvish leadership."
 msgstr ""
+"Succession among the Elvish nobility is a highly structured process "
+"determined by a number of stringent constraints. The future leaders of the "
+"elves have the difficult task of governing the three-fold aspects of Elvish "
+"society: warriors and rangers who defend the forests, peaceable civilians "
+"who shy away from combat altogether, and the collective group of healers and "
+"mystics who study the art of faerie magic. Being able to reconcile the "
+"differences between these factions and effectively lead their people "
+"requires considerable personal merit and a deep understanding of all elves, "
+"be they warrior, mystic, or pacifist.\n"
+"\n"
+"Many elves begin training in archery and swordsmanship from a young age, and "
+"especially promising adolescent boys of appropriate lineage are selected to "
+"study under Enchantresses who have mastered the mystic arts. Since the "
+"nature of faerie magic lends itself more to female elves than to male elves, "
+"only the most talented learn to temper the volatile way of the faerie and "
+"connect themselves to the world of the arcane. Those who prove their "
+"personal mettle in swordsmanship and sorcery must then learn to apply their "
+"newfound powers wisely, for violent conflict is something never to be taken "
+"lightly, and just because a battle can be won does not mean it should be "
+"fought in the first place. Reconciling potent combat prowess with diplomatic "
+"restraint is difficult for most, but those who can do so are granted the "
+"title of Lord and become the next generation of Elvish leadership."
 
 #. [unit_type]: id=Elvish Marksman, race=elf
 #: data/core/units/elves/Marksman.cfg:4
@@ -2407,6 +2496,15 @@ msgid ""
 "keep up with the eyes is no easy feat, and realizing this prodigious skill "
 "does come with the cost of weakness in close quarters."
 msgstr ""
+"Elves have an intimate connection to the world of faerie, which innately "
+"imbues them with a small amount of magic and grants them highly acute "
+"senses. This, combined with years of hunting in the deep forests, makes the "
+"elves incredibly keen-sighted, a gift which contributes greatly to their "
+"mastery of the bow. An elf practised at archery is capable of hitting a "
+"pinhole-sized target from hundreds of paces away and can shoot quickly and "
+"precisely enough to split falling branches. Of course, training the body to "
+"keep up with the eyes is no easy feat, and realizing this prodigious skill "
+"does come with the cost of weakness in close quarters."
 
 #. [attack]: type=pierce
 #: data/core/units/elves/Marksman.cfg:38
@@ -2441,6 +2539,17 @@ msgid ""
 "invasion force, and it is precisely because of the skillful maneuvering of "
 "the marshals that manage the protection of their people."
 msgstr ""
+"Elves are not often the instigators of open war, but will not shy away when "
+"the time comes to do battle. Of course, blindly engaging in combat without "
+"any strategy or tactic is foolish, and so the elves maintain a small number "
+"of strategically-minded commanders at all times. Selected from the most "
+"talented captains, marshals undergo extensive training in various military "
+"styles, including those of the humans and orcs. They are brilliant, "
+"unorthodox strategists who excel at breaking down large battlefronts into "
+"smaller skirmishes, transforming ordinary campaigns into dispersed guerrilla "
+"warfare. Engaging elves in their own homes is always a daunting task for any "
+"invasion force, and it is precisely because of the skilful manoeuvring of "
+"the marshals that manage the protection of their people."
 
 #. [unit_type]: id=Elvish Outrider, race=elf
 #: data/core/units/elves/Outrider.cfg:4
@@ -2489,6 +2598,16 @@ msgid ""
 "choose to withdraw rather than risk a game of guerrilla warfare with rangers "
 "in the forests."
 msgstr ""
+"The silent watchers of the forests, rangers are masters of stealth and "
+"reconnaissance. Many are explorers and loners, preferring to travel alone "
+"along the paths between the towering trees and among the unspoiled natural "
+"beauty of their homes, of which they are fiercely protective. While they "
+"possess considerable skill in both blade and bow, rangers are a little less "
+"adept at fighting other warriors on even terms, preferring instead to ambush "
+"their enemies from the shadows in the woods. A surprise attack from rangers "
+"can cripple even a force many times their size, and attacking armies often "
+"choose to withdraw rather than risk a game of guerrilla warfare with rangers "
+"in the forests."
 
 #. [female]
 #: data/core/units/elves/Ranger.cfg:92
@@ -2517,6 +2636,19 @@ msgid ""
 "engagement means that Elvish riders are the oft unsung heroes of war, left "
 "supporting their brethren from the back lines."
 msgstr ""
+"The prevalence of guerrilla tactics in Elven strategy results in great "
+"emphasis on maintaining highly mobile units capable of fighting on an "
+"adaptable battlefront. This style of warfare requires rapid communication "
+"between small skirmish groups and the ability to quickly transfer troops "
+"between combat zones. Experienced Elvish riders know this well and thus "
+"devote most of their time to improving their horsemanship rather than their "
+"individual fighting skills. The speed at which they travel through the "
+"forest would be suicidal for any other cavalry, and they are tenacious "
+"enough to ride for as much as two or three days at a time without resting. "
+"While the intelligence and communication these horsemen provide is "
+"invaluable to Elven tactics, the lack of combat prowess and front line "
+"engagement means that Elvish riders are the oft unsung heroes of war, left "
+"supporting their brethren from the back lines."
 
 #. [unit_type]: id=Elvish Scout, race=elf
 #: data/core/units/elves/Scout.cfg:4
@@ -2538,6 +2670,17 @@ msgid ""
 "units and are adept at quickly transferring information between patrols and "
 "skirmish groups, whom they also reinforce when necessary."
 msgstr ""
+"Although the equines bred by the wood elves are much faster and far more "
+"agile than regular horses, they tend to be more fickle and harder to master. "
+"It takes many years to train an Elven pony, but once tamed, they are among "
+"the most loyal and devoted mounts. These unique horses allow Elvish horsemen "
+"to ride at extreme speeds through thick forests with nary a scratch and "
+"outpace most other cavalry on open ground. Though these riders possess some "
+"skill in wielding swords and bows, their greatest effectiveness comes from "
+"their ability to scout and outmanoeuvre enemy forces rather than engage in "
+"combat directly. Elvish scouts are most often used as messengers and support "
+"units and are adept at quickly transferring information between patrols and "
+"skirmish groups, whom they also reinforce when necessary."
 
 #. [unit_type]: id=Elvish Shaman, race=elf
 #: data/core/units/elves/Shaman.cfg:4
@@ -2583,6 +2726,15 @@ msgid ""
 "elves have honed their art to its highest form and are the undisputed "
 "masters of archery."
 msgstr ""
+"Though not a formal title, ‘Sharpshooter’ is the epithet given to the most "
+"gifted Elvish marksmen. These expert archers are capable of feats that, even "
+"by Elven standards, border on miraculous: they have the precision to split "
+"incoming arrows mid-air and can loose a second arrow before the first hits, "
+"all while maintaining enough power to damage steel armour. A single volley "
+"of their arrows is enough to bring down a knight on horseback, and even "
+"heavily-armoured infantry will survive few additional shots. The "
+"sharpshooters of the elves have honed their art to its highest form and are "
+"the undisputed masters of archery."
 
 #. [female]
 #: data/core/units/elves/Sharpshooter.cfg:81
